syntax = "proto3";

package crm;

service CRMService {
  // Contact management
  rpc GetContact(GetContactRequest) returns (Contact);
  rpc GetContactsByIds(GetContactsByIdsRequest) returns (GetContactsByIdsResponse);
  rpc GetContacts(GetContactsRequest) returns (GetContactsResponse);
  rpc CreateContact(CreateContactRequest) returns (Contact);
  rpc UpdateContact(UpdateContactRequest) returns (Contact);
  rpc DeleteContact(DeleteContactRequest) returns (DeleteContactResponse);
  
  // Lead management
  rpc GetLead(GetLeadRequest) returns (Lead);
  rpc GetLeadsByIds(GetLeadsByIdsRequest) returns (GetLeadsByIdsResponse);
  rpc GetLeadsByContactIds(GetLeadsByContactIdsRequest) returns (GetLeadsByContactIdsResponse);
  rpc GetLeads(GetLeadsRequest) returns (GetLeadsResponse);
  rpc CreateLead(CreateLeadRequest) returns (Lead);
  rpc UpdateLead(UpdateLeadRequest) returns (Lead);
  rpc ConvertLead(ConvertLeadRequest) returns (Opportunity);
  rpc DeleteLead(DeleteLeadRequest) returns (DeleteLeadResponse);
  
  // Opportunity management
  rpc GetOpportunity(GetOpportunityRequest) returns (Opportunity);
  rpc GetOpportunitiesByIds(GetOpportunitiesByIdsRequest) returns (GetOpportunitiesByIdsResponse);
  rpc GetOpportunities(GetOpportunitiesRequest) returns (GetOpportunitiesResponse);
  rpc CreateOpportunity(CreateOpportunityRequest) returns (Opportunity);
  rpc UpdateOpportunity(UpdateOpportunityRequest) returns (Opportunity);
  rpc DeleteOpportunity(DeleteOpportunityRequest) returns (DeleteOpportunityResponse);
  
  // Activity management
  rpc GetActivitiesByIds(GetActivitiesByIdsRequest) returns (GetActivitiesByIdsResponse);
  rpc GetActivities(GetActivitiesRequest) returns (GetActivitiesResponse);
  rpc CreateActivity(CreateActivityRequest) returns (Activity);
  
  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Enums
enum LeadStatus {
  LEAD_STATUS_NEW = 0;
  LEAD_STATUS_QUALIFIED = 1;
  LEAD_STATUS_PROPOSAL = 2;
  LEAD_STATUS_NEGOTIATION = 3;
  LEAD_STATUS_CLOSED_WON = 4;
  LEAD_STATUS_CLOSED_LOST = 5;
}

enum OpportunityStage {
  OPPORTUNITY_STAGE_PROSPECTING = 0;
  OPPORTUNITY_STAGE_QUALIFICATION = 1;
  OPPORTUNITY_STAGE_PROPOSAL = 2;
  OPPORTUNITY_STAGE_NEGOTIATION = 3;
  OPPORTUNITY_STAGE_CLOSED_WON = 4;
  OPPORTUNITY_STAGE_CLOSED_LOST = 5;
}

enum ActivityType {
  ACTIVITY_TYPE_CALL = 0;
  ACTIVITY_TYPE_EMAIL = 1;
  ACTIVITY_TYPE_MEETING = 2;
  ACTIVITY_TYPE_TASK = 3;
  ACTIVITY_TYPE_NOTE = 4;
}

// Messages
message Contact {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string company = 5;
  string position = 6;
  string source = 7;
  repeated string tags = 8;
  string custom_fields = 9; // JSON string
  string assigned_to = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
  string organization_id = 13;
}

message Lead {
  string id = 1;
  string contact_id = 2;
  string title = 3;
  LeadStatus status = 4;
  string source = 5;
  double value = 6;
  int32 probability = 7;
  int64 expected_close_date = 8;
  string notes = 9;
  string assigned_to = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
  string organization_id = 13;
}

message Opportunity {
  string id = 1;
  string contact_id = 2;
  string title = 3;
  OpportunityStage stage = 4;
  double value = 5;
  int32 probability = 6;
  int64 expected_close_date = 7;
  int64 actual_close_date = 8;
  string description = 9;
  string assigned_to = 10;
  repeated string product_ids = 11;
  int64 created_at = 12;
  int64 updated_at = 13;
  string organization_id = 14;
}

message Activity {
  string id = 1;
  ActivityType type = 2;
  string title = 3;
  string description = 4;
  string related_entity_type = 5; // "contact", "lead", "opportunity"
  string related_entity_id = 6;
  string user_id = 7;
  int64 scheduled_at = 8;
  int64 completed_at = 9;
  int64 created_at = 10;
  string organization_id = 11;
}

// Request/Response messages
message GetContactRequest {
  string id = 1;
}

message GetContactsByIdsRequest {
  repeated string ids = 1;
}

message GetContactsByIdsResponse {
  repeated Contact items = 1;
}

message GetContactsRequest {
  string search = 1;
  string company = 2;
  string source = 3;
  string assigned_to = 4;
  int32 limit = 5;
  int32 offset = 6;
  string sort_field = 7;
  string sort_direction = 8;
}

message GetContactsResponse {
  repeated Contact contacts = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message CreateContactRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string company = 4;
  string position = 5;
  string source = 6;
  repeated string tags = 7;
  string custom_fields = 8;
  string assigned_to = 9;
}

message UpdateContactRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string company = 5;
  string position = 6;
  repeated string tags = 7;
  string custom_fields = 8;
  string assigned_to = 9;
}

message DeleteContactRequest {
  string id = 1;
}

message DeleteContactResponse {
  bool success = 1;
}

message GetLeadRequest {
  string id = 1;
}

message GetLeadsByIdsRequest {
  repeated string ids = 1;
}

message GetLeadsByIdsResponse {
  repeated Lead items = 1;
}

message GetLeadsByContactIdsRequest {
  repeated string contact_ids = 1;
}

message GetLeadsByContactIdsResponse {
  repeated Lead leads = 1;
}

message GetLeadsRequest {
  LeadStatus status = 1;
  string source = 2;
  string assigned_to = 3;
  int64 date_from = 4;
  int64 date_to = 5;
  int32 limit = 6;
  int32 offset = 7;
  string sort_field = 8;
  string sort_direction = 9;
}

message GetLeadsResponse {
  repeated Lead leads = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message CreateLeadRequest {
  string contact_id = 1;
  string title = 2;
  string source = 3;
  double value = 4;
  int64 expected_close_date = 5;
  string notes = 6;
  string assigned_to = 7;
}

message UpdateLeadRequest {
  string id = 1;
  string title = 2;
  LeadStatus status = 3;
  double value = 4;
  int32 probability = 5;
  int64 expected_close_date = 6;
  string notes = 7;
  string assigned_to = 8;
}

message ConvertLeadRequest {
  string id = 1;
  string title = 2;
  double value = 3;
  int64 expected_close_date = 4;
  string description = 5;
}

message DeleteLeadRequest {
  string id = 1;
}

message DeleteLeadResponse {
  bool success = 1;
}

message GetOpportunityRequest {
  string id = 1;
}

message GetOpportunitiesByIdsRequest {
  repeated string ids = 1;
}

message GetOpportunitiesByIdsResponse {
  repeated Opportunity items = 1;
}

message GetOpportunitiesRequest {
  OpportunityStage stage = 1;
  string assigned_to = 2;
  int64 date_from = 3;
  int64 date_to = 4;
  double value_min = 5;
  double value_max = 6;
  int32 limit = 7;
  int32 offset = 8;
  string sort_field = 9;
  string sort_direction = 10;
}

message GetOpportunitiesResponse {
  repeated Opportunity opportunities = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message CreateOpportunityRequest {
  string contact_id = 1;
  string title = 2;
  double value = 3;
  int32 probability = 4;
  int64 expected_close_date = 5;
  string description = 6;
  string assigned_to = 7;
  repeated string product_ids = 8;
}

message UpdateOpportunityRequest {
  string id = 1;
  string title = 2;
  OpportunityStage stage = 3;
  double value = 4;
  int32 probability = 5;
  int64 expected_close_date = 6;
  int64 actual_close_date = 7;
  string description = 8;
  repeated string product_ids = 9;
}

message DeleteOpportunityRequest {
  string id = 1;
}

message DeleteOpportunityResponse {
  bool success = 1;
}

message GetActivitiesByIdsRequest {
  repeated string ids = 1;
}

message GetActivitiesByIdsResponse {
  repeated Activity items = 1;
}

message GetActivitiesRequest {
  ActivityType type = 1;
  string user_id = 2;
  string related_entity_type = 3;
  string related_entity_id = 4;
  int64 date_from = 5;
  int64 date_to = 6;
  int32 limit = 7;
  int32 offset = 8;
}

message GetActivitiesResponse {
  repeated Activity activities = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message CreateActivityRequest {
  ActivityType type = 1;
  string title = 2;
  string description = 3;
  string related_entity_type = 4;
  string related_entity_id = 5;
  int64 scheduled_at = 6;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  int64 timestamp = 2;
}